Flask-Sentinel Changelog
========================

Here you can see the full list of changes between releases.

Version 0.0.4
-------------

Not released yet.

- Docs: add example of loading settings from py module to README.
- Fix: include templates with package so manually copying them is not needed
  anymore.
- Fix: Skip redis tests if redis-server is not running or connection cannot be
  established to the server.
- Fix: Circular reference prevents package from running under Python 3.

Version 0.0.3
-------------

Released on 25 Jun, 2015.

- Fix: Turn implicit DEBUG mode off. Closes #4.
- Fix: Setting redis url from ConnectionPool as redis from_url method wont'
  reset the connection itself (Xu Wang).
- Fix: Add Client button causes ``404 Not Found`` unless management page is
  located at ``/`` (Pouyan Azari).


Version 0.0.2
-------------

Released on 06 Feb, 2015.

- Fix: Add User button causes ``404 Not Found`` unless management page is
  located at ``/``. Closes #1.


Version 0.0.1
-------------

Released on 03 Feb, 2015.

- First release.