@@ -9,9 +9,9 @@
 import unittest
 
 from .base import TestBase, is_redis_available
-from flask.ext.sentinel.core import mongo, redis
-from flask.ext.sentinel.data import Storage
-from flask.ext.sentinel.models import Client, User
+from ..core import mongo, redis
+from ..data import Storage
+from ..models import Client, User
 
 
 class TestTokenEndpoint(TestBase):
@@ -89,7 +89,25 @@ class TestAuthEndpoint(TestBase):
 
 class TestManagementEndpoint(TestBase):
     def test_man_endpoint(self):
+        # management endpoint is accessible with no auth
         r = self.test_client.get(self.man_endpoint)
+        self.assert200(r.status_code)
+
+        self.app.config['SENTINEL_MANAGEMENT_USERNAME'] = 'user'
+        self.app.config['SENTINEL_MANAGEMENT_PASSWORD'] = 'pw'
+
+        # inaccessible with no auth
+        r = self.test_client.get(self.man_endpoint)
+        self.assert401(r.status_code)
+
+        # inaccessible with bad auth
+        headers = [('Authorization', 'Basic %s' % 'DontThinkSo')]
+        r = self.test_client.get(self.man_endpoint, headers=headers)
+        self.assert401(r.status_code)
+
+        # green light
+        headers = [('Authorization', 'Basic %s' % 'dXNlcjpwdw==')]
+        r = self.test_client.get(self.man_endpoint, headers=headers)
         self.assert200(r.status_code)
 
 
